# bti-lp1

./: README.md
lista1/: autor.md
lista1/histograma/include/: function.hpp
lista1/intervalos/include/: func.hpp
lista1/intervalos/src/: func.cpp  main.cpp
lista1/pessoa_e_cadastro/: README.md
lista1/pessoa_e_cadastro/data_expected/: in1_OUT.txt
lista1/pessoa_e_cadastro/include/: database.hpp
lista1/pessoa_e_cadastro/src/: database.cpp  main.cpp
lista1/ponto_em_retangulo/: CMakeLists.txt
lista1/ponto_em_retangulo/include/: function.h
lista1/ponto_em_retangulo/src/: function.cpp  main.cpp
lista2/: README.md
lista2/bingo/: CMakeLists.txt  README.md
lista2/bingo/data_expected/: in1_OUT.txt  in2_OUT.txt  in3_OUT.txt  in4_OUT.txt
lista2/bingo/data_in/: in1.txt  in2.txt  in3.txt  in4.txt
lista2/bingo/include/: BingoRand.hpp  Player.hpp
lista2/bingo/src/: BingoRand.cpp  Player.cpp  main.cpp
lista2/casa_e_rua/: CMakeLists.txt  README.md
lista2/casa_e_rua/data_expected/: in1_OUT.txt  in2_OUT.txt  in3_OUT.txt  in4_OUT.txt  in5_OUT.txt  in6_OUT.txt  in7_OUT.txt
lista2/casa_e_rua/data_in/: in1.txt  in2.txt  in3.txt  in4.txt  (+3 more)
lista2/matrizes_com_classe/: CMakeLists.txt  README.md
lista2/matrizes_com_classe/data_expected/: in1_OUT.txt  in2_OUT.txt  in3_OUT.txt  in4_OUT.txt  in5_OUT.txt
lista2/matrizes_com_classe/data_in/: in1.txt  in2.txt  in3.txt  in4.txt  in5.txt
lista2/matrizes_com_classe/include/: Matriz.hpp
lista2/matrizes_com_classe/src/: Matriz.cpp  main.cpp
lista2/matrizes_com_classe/test_manager/src/: test_manager.cpp
lista2/pessoa_e_cadastro/: CMakeLists.txt  README.md
lista2/pessoa_e_cadastro/data/: CadastroUnico.txt
lista2/pessoa_e_cadastro/data_expected/: in1_OUT.txt  in2_OUT.txt  in3_OUT.txt  in4_OUT.txt
lista2/pessoa_e_cadastro/data_in/: in1.txt  in2.txt  in3.txt  in4.txt
lista2/pessoa_e_cadastro/include/: Cadastro.hpp  Pessoa.hpp
lista2/pessoa_e_cadastro/src/: Cadastro.cpp  Pessoa.cpp  main.cpp
lista2/scripts/: generate-in-out.py  inout_casa_e_rua.txt  inout_matrizes.txt  random_bingo.py  random_casa_rua.py
trabalho-2-auto-complete-e-autocorrect/: CMakeLists.txt  README.md
trabalho-2-auto-complete-e-autocorrect/data/: cities.txt  ptbrcorpus.txt  wikitionary.txt
trabalho-2-auto-complete-e-autocorrect/include/: Autocomplete.hpp  Autocorrect.hpp  Database.hpp  Interface.hpp  Test.hpp  Word.hpp
trabalho-2-auto-complete-e-autocorrect/src/: Autocomplete.cpp  Autocorrect.cpp  Database.cpp  Interface.cpp  Test.cpp  Word.cpp  main.cpp
trabalho-2-auto-complete-e-autocorrect/tests/: testData.txt  testInputs.txt  testResults.txt
trabalho-3-snaze/: CMakeLists.txt  README.md
trabalho-3-snaze/data/: maze1.txt  sequenciaNiveisColisao.txt  sequenciaNiveisFimDeGame.txt
trabalho-3-snaze/include/: Game.hpp  Interface.hpp  Maze.hpp  Player.hpp
trabalho-3-snaze/src/: Game.cpp  Interface.cpp  Maze.cpp  Player.cpp  main.cpp
trabalho1-forca/: CMakeLists.txt  README.md  author.md
trabalho1-forca/data/: scores.txt  words.txt
trabalho1-forca/include/: hangman.hpp  view.hpp
trabalho1-forca/src/: hangman.cpp  main.cpp  view.cpp
(+5 files in other folders)
